--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 python-dotenv==1.1.0
 langchain==1.2.0
 langchain-openai==1.1.7
-langchain-core==1.2.7
+langchain-core==1.2.11
 pydantic==2.12.5
 langgraph==1.0.7
+langgraph-checkpoint-postgres==3.0.4
